--- a/react-client/src/components/HintAuthorMin/HintAuthorMin.css
+++ b/react-client/src/components/HintAuthorMin/HintAuthorMin.css
@@ -1,14 +1,28 @@
 .am-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
 }
 
 .am-image {
-    width: 150px;
-    height: 150px;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     overflow: hidden;
     background-size: cover;
     background-position: center;
+}
+
+.am-name {
+    font-size: 20px;
+    color: rgb(32, 32, 32);
+    margin-left: 15px;
+}
+
+.am-name:hover {
+    text-decoration: none;
+
+    color: rgb(0, 0, 0);
+    border-bottom: 1px solid #000;
 }
